--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -15,6 +15,12 @@
     --hljs-bg: rgb(28, 29, 33);
     --code-bg: rgb(245, 245, 245);
     --border: rgb(238, 238, 238);
+    --link-background-color: #e8e3f7;
+    --link-transition: all 0.3s ease;
+
+    /* for type pages theming */
+    --signature: var(--primary);
+    --signature-bg: var(--secondary);
 }
 
 .dark {
