--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -23,34 +23,55 @@
 
 {{- partial "extend_footer.html" . }}
 
+
 <script>
-    let menu = document.getElementById('menu')
-    if (menu) {
-        menu.scrollLeft = localStorage.getItem("menu-scroll-position");
-        menu.onscroll = function () {
-            localStorage.setItem("menu-scroll-position", menu.scrollLeft);
-        }
+  (function() {
+    /* theme toggle */
+    const disableThemeToggle = '{{ if site.Params.disableThemeToggle }}1{{ end }}' == '1';
+    if (disableThemeToggle) {
+      return;
     }
 
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener("click", function (e) {
-            e.preventDefault();
-            var id = this.getAttribute("href").substr(1);
-            if (!window.matchMedia('(prefers-reduced-motion: reduce)').matches) {
-                document.querySelector(`[id='${decodeURIComponent(id)}']`).scrollIntoView({
-                    behavior: "smooth"
-                });
-            } else {
-                document.querySelector(`[id='${decodeURIComponent(id)}']`).scrollIntoView();
-            }
-            if (id === "top") {
-                history.replaceState(null, null, " ");
-            } else {
-                history.pushState(null, null, `#${id}`);
-            }
-        });
-    });
+    let button = document.getElementById("theme-toggle")
+    // remove the listeners first to prevent adding duplicated listener when history goes back and forth
+    button.removeEventListener('click', toggleThemeListener)
+    // listen to toggle button
+    button.addEventListener('click', toggleThemeListener)
+  })();
+</script>
 
+<script>
+  (function () {
+    let menu = document.getElementById('menu')
+    if (menu) {
+      menu.scrollLeft = localStorage.getItem("menu-scroll-position");
+      menu.onscroll = function () {
+        localStorage.setItem("menu-scroll-position", menu.scrollLeft);
+      }
+    }
+
+    const disableSmoothScroll = '{{- if (.Param "DisableSmoothScroll") -}}1{{- end -}}' == '1';
+    const enableInstantClick = '{{- if (.Param "EnableInstantClick") -}}1{{- end -}}' == '1';
+    // instant click and smooth scroll are mutually exclusive
+    if (window.matchMedia('(prefers-reduced-motion: reduce)').matches || disableSmoothScroll || enableInstantClick) {
+      return;
+    }
+    // only run this code if smooth scroll should be enabled
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener("click", function (e) {
+        e.preventDefault();
+        var id = this.getAttribute("href").substr(1);
+        document.querySelector(`[id='${decodeURIComponent(id)}']`).scrollIntoView({
+          behavior: "smooth"
+        });
+        if (id === "top") {
+          history.replaceState(null, null, " ");
+        } else {
+          history.pushState(null, null, `#${id}`);
+        }
+      });
+    });
+  })();
 </script>
 
 {{- if (not site.Params.disableScrollToTop) }}
@@ -69,20 +90,7 @@
 </script>
 {{- end }}
 
-{{- if (not site.Params.disableThemeToggle) }}
-<script>
-    document.getElementById("theme-toggle").addEventListener("click", () => {
-        if (document.body.className.includes("dark")) {
-            document.body.classList.remove('dark');
-            localStorage.setItem("pref-theme", 'light');
-        } else {
-            document.body.classList.add('dark');
-            localStorage.setItem("pref-theme", 'dark');
-        }
-    })
 
-</script>
-{{- end }}
 
 
 
@@ -220,3 +228,28 @@
     }
   })();
   </script>
+
+{{- /* InstantClick.js */}}
+{{- if (.Param "EnableInstantClick") }}
+{{- $instantclick := resources.Get "js/instantclick.js" }}
+{{- if hugo.IsProduction }}
+  {{- $instantclick = minify $instantclick }}
+{{- end }}
+<script src="{{ $instantclick.RelPermalink }}" data-no-instant
+  {{- if site.Params.assets.disableFingerprinting }}integrity="{{ $instantclick.Data.Integrity }}"{{- end }}
+></script>
+<script data-no-instant>
+      InstantClick.on('change', function(){  
+      //mathjax
+      if (window.MathJax){
+         MathJax.Hub.Queue(["Typeset",MathJax.Hub]);}
+      //isso
+     // if (typeof Isso !== 'undefined'){
+      //   console.log("isso found");
+        // window.Isso.init();
+	// window.Isso.fetchComments();
+	// }
+     });
+   InstantClick.init();
+</script>
+{{- end }} 
