--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -6,6 +6,11 @@
     padding: var(--gap);
 }
 
+/* for post page */
+.main.post {
+    max-width: calc(var(--post-width) + var(--gap) * 2);
+}
+
 .page-header h1 {
     font-size: 40px;
 }
