use mousedown to initialize instantclick

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -250,6 +250,6 @@
       //window.Isso.fetchComments();
       // }
      });
-   InstantClick.init();
+   InstantClick.init('mousedown');
 </script>
 {{- end }} 
