--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -126,7 +126,7 @@ function toggleThemeListener() {
 
                 {{- $lang := .Lang}}
                 {{- $separator := or $label_text (not site.Params.disableThemeToggle)}}
-                {{- with site.Home.AllTranslations }}
+                {{- with site.Home.Translations }}
                 <ul class="lang-switch">
                     {{- if $separator }}<li>|</li>{{ end }}
                     {{- range . -}}
