--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -40,7 +40,7 @@
 
 {{- if .IsHome }}
 {{- $pages = where site.RegularPages "Type" "in" site.Params.mainSections }}
-{{- $pages = where $pages "Params.hiddenInHomeList" "!=" "true"  }}
+{{- $pages = where $pages "Params.hiddenInHomeList" "!=" true }}
 {{- end }}
 
 {{- if site.Params.ShowAllPagesInArchive }}
@@ -118,7 +118,7 @@
 
 {{- if .IsHome }}
 {{- $pages = where site.RegularPages "Type" "in" site.Params.mainSections }}
-{{- $pages = where $pages "Params.hiddenInHomeList" "!=" "true"  }}
+{{- $pages = where $pages "Params.hiddenInHomeList" "!=" true }}
 {{- end }}
 
 {{- $paginator := .Paginate $pages }}
