--- a/layouts/partials/post_nav_links.html
+++ b/layouts/partials/post_nav_links.html
@@ -1,4 +1,5 @@
 {{- $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
+{{- $pages := where $pages "Params.hiddenInHomeList" "!=" true }}
 {{- if and (gt (len $pages) 1) (in $pages . ) }}
 <nav class="paginav">
   {{- with $pages.Next . }}
