--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -16,6 +16,45 @@
 {{- $scratch.Add "meta" (slice .) }}
 {{- end }}
 
+
+
+{{- $url := "https://comments.blog.konomama.dev/count" -}}
+{{- $postPermalink := .Page.RelPermalink -}}
+
+{{- $body := printf "[\"%s\"]" $postPermalink | safeJS -}}
+
+{{- $options := dict
+    "method" "POST"
+    "headers" (dict "Content-Type" "application/json" "Cache-Control" "no-cache")
+    "body" $body
+}} 
+
+{{- $response := resources.GetRemote $url $options -}}
+
+{{- with $response -}}
+  {{- if .Err -}}
+    <p>Error fetching remote resource: {{ .Err }}</p>
+  {{- else -}}
+    {{- $content := .Content -}}
+    
+    {{- /* Remove brackets and extract number */ -}}
+    {{- $numberStr := $content | replaceRE "^\\[\"?([0-9]+)\"?\\]?$" "$1" -}}
+    {{- $number := $numberStr | int -}}
+    
+    {{- if $number -}}
+      {{- $scratch.Add "meta" (printf "%d 💬" $number) }}
+
+    {{- end -}}
+  {{- end -}}
+{{- else -}}
+  <p>Unable to get remote resource {{ $url }}</p>
+{{- end -}}
+
+
+
+
+
+
 {{- with ($scratch.Get "meta") }}
 {{- delimit . "&nbsp;·&nbsp;" | safeHTML -}}
 {{- end -}}
